playground/playground-ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: playground-ui
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: playground-ui
  template:
    metadata:
      labels:
        app: playground-ui
    spec:
      containers:
      - image: https://hub.docker.com/r/wil42/playground:v1
        name: playground-ui
        ports:
        - containerPort: 80
