playground/playground-ui-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: wil-playground
spec:
  ports:
  - port: 80
    targetPort: 8888
  selector:
    app: wil-playground
