playground/playground-ui-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: playground-ui-ingress
  namespace: dev
spec:
  rules:
  - http:
      paths:
      - path: /playground
        pathType: Prefix
        backend:
          service:
            name: wil-playground
            port:
              number: 8888
